--- a/MyTicket/src/main/webapp/WEB-INF/Views/header.html
+++ b/MyTicket/src/main/webapp/WEB-INF/Views/header.html
@@ -29,7 +29,9 @@ img {
 </head>
 <body>
 	<header>
-		myTicket <span></span>
+		myTicket <span style="margin-left: 1100px"><a href=""><button
+					style="padding: 5px; border: 0px;">Profile</button> </a><a href=""><button
+					style="padding: 5px; border: 0px;">Logout</button></a></span>
 	</header>
 </body>
 </html>
